# pytest-item-dict

./: .gitignore  404.html  CHANGELOG.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: deploy-docs.yml  dev.yml  publish-to-test-pypi.yml
docs/: examples.md  index.md
docs/examples/: json.md  xml.md
docs/src/: collect_dict.md  item_dict_enums.md  plugin.md  test_dict.md
examples/: conftest.py  index.html  pyproject.toml
examples/output/reports/: collect_hierarchy.json  collect_hierarchy.xml  test_hierarchy.json  test_hierarchy.xml  test_unexecuted_hierarchy.json  test_unexecuted_hierarchy.xml
examples/suites/rt/: test_rt_linux.py  test_rt_windows.py
src/collect_dict/: index.html
src/item_dict_enums/: index.html
src/plugin/: index.html
src/pytest_item_dict/: attributes_dict.py  collect_dict.py  dict_2_xml.py  item_dict_enums.py  items_dict.py  plugin.py  test_dict.py
src/test_dict/: index.html
suites/vt/linux/: test_v_linux.py  test_v_posix.py
test_dev/output/reports/: collect_hierarchy.json  collect_hierarchy.xml  test_hierarchy.json  test_hierarchy.xml
tests/: conftest.py  test_item_dict.py
